--- a/README
+++ b/README
@@ -15,7 +15,10 @@
   If you want to run any tests, check the hints given 
   in UnitTests/README.
   
+  For More Informations Visit : http://www.free-tuts.tk/2013/09/mysql2mysqli-open-source-php-script.html
+  
   Have fun!
   
-  
-  Saif Lacrimosa<cool2309@gmail.com> | <www.free-tuts.tk>
+   _______________________________________________________
+  |Saif Lacrimosa<cool2309@gmail.com> | <www.free-tuts.tk>|
+   -------------------------------------------------------
