Updating the README file
Updating the README file

--- a/README
+++ b/README
@@ -15,10 +15,8 @@
   If you want to run any tests, check the hints given 
   in UnitTests/README.
   
-  For More Informations Visit : http://www.free-tuts.tk/2013/09/mysql2mysqli-open-source-php-script.html
-  
   Have fun!
   
    _________________________________________________________
-  |Saif Lacrimosa<cool2309@gmail.com> | < www.free-tuts.tk >|
+  |Rahmani Saif El Moulouk <saiflacrimosa@gmail.com> | < www.rahmani.site >|
    ---------------------------------------------------------
